--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.52.3",
     "sass-loader": "^10",
     "vue-cli-plugin-i18n": "~2.3.1",
+    "vue-multiselect": "^2.1.6",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
