--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-i18n": "^8.26.3",
     "vue-i18n-bridge": "^9.2.0-beta.10",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -29,7 +30,6 @@
     "sass": "^1.52.3",
     "sass-loader": "^10",
     "vue-cli-plugin-i18n": "~2.3.1",
-    "vue-good-table": "^2.21.11",
     "vue-multiselect": "^2.1.6",
     "vue-template-compiler": "^2.6.11"
   },
